Add maven-checkstyle-plugin and fix all violations (#57)
- Add maven-checkstyle-plugin 3.6.0 with spring-javaformat-checkstyle
  0.0.43; violations fail the build at validate phase
- Add checkstyle-suppressions.xml suppressing header, javadoc, import
  order, and two specific suppressions (SpringMethodVisibility for
  KpsComparisonTest, NestedIfDepth for RepoManager)
- Fix all violations across jhelm-gotemplate, jhelm-core, jhelm-kube,
  jhelm-app: SpringCatch (e→ex), NeedBraces, SpringLambda (parens +
  block collapse), SpringTernary, AvoidStarImport, InnerTypeLast,
  SpringHideUtilityClassConstructor+FinalClass, AnnotationUseStyle
- Add .claude/skills/checkstyle/ skill with Python fix script for future
  violations
- Update CLAUDE.md with Checkstyle section
- Fix indentation error in coding-standards skill (tabs, not 4 spaces)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>